# langchain-t1

./: README.md  main.py  pyproject.toml
01_helloworld/: LangChainV1.2.py  StandardDesc.py  test1.py
03_ollama/: LangChain_Ollama.py
04_prompt/chat_prompt_template/: ChatPromptTemplate_Constructoe.py  ChatPromptTemplate_FormatMessages.py
04_prompt/invoke/: LLM_Batch.py  LLM_Invoke.py  LLM_aBatch.py  LLM_aInvoke.py  LLM_aStream.py  LLM_stream.py  async.py
04_prompt/load_external/: load_prompt.py  load_prompt2.py  prompt.json
04_prompt/prompt_template/: PromptTemplate_Constructor.py  PromptTemplate_FromTemplate.py  Prompt_Template_Combined.py  Prompt_Template_PartialVariables.py
05_parser/: AnnotatedPydantic.py  AnnotatedTypedDict.py  JsonOutputParser.py  Pydantic.py  Pydantic2.py  StrOutputParser.py  TypedDict.py
06_lcel/: LCEL_RunnableBranchDemo.py  LCEL_RunnableLambdaDemo.py  LCEL_RunnableParallelDemo.py  LCEL_RunnableSequenceDemo.py  LCEL_RunnableSerializableDemo.py
07_memory/: InMemoryChatMessageHistory.py  RedisChatMessageHistory.py  RunnableWithMessageHistory.py
08_tool/: LLMQueryWeatherDemo.py  QueryWeaterTool.py  Tool_AddNumberTool.py  Tool_AddNumberToolPro.py
09_embedding/: EmbeddingStoreRedis.py  Text2Embedding_CosSimilarity.py  Text2Embedding_DashScope.py  Text2Embedding_DashScopeHello.py  Text2Embedding_DashScopePro.py  Text2Embedding_OpenAiHello.py
10_rag/: EmbeddingRagLLM.py  RedisVectorStore.py  SimilaritySearchInRedis.py
10_rag/docloads/: CsvLoad.py  DocLoad.py  JsonLoad.py  MarkdownLoad.py  PdfLoad..py  TxtLoad.py
10_rag/textsplit/: RecursiveDocumentSplitter.py  RescursiveTextSplitter.py
11_MCP/: McpClient.py
12_agent/: Agent2Agent.py  AgentReact.py  AgentSmartSelectV0.3.py  AgentSmartSelectV1.0.py
(+4 files in other folders)
