[project]
name = "langchain-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "requests>=2.33.1",
]
