[project]
name = "langchain-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dashscope>=1.25.16",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "redis==5.3.1",
    "requests>=2.33.1",
]
