[project]
name = "langchain-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dashscope>=1.25.16",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "jq>=1.11.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-redis>=0.2.5",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "markdown>=3.10.2",
    "mcp>=1.27.0",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "redis==5.3.1",
    "regex==2026.1.14",
    "requests>=2.33.1",
    "unstructured>=0.22.21",
]
